adapter/img/jebp.h

typedef unsigned char jebp_ubyte;
typedef JEBP__INT jebp_int;
typedef enum jebp_error_t {
    JEBP_OK,
    JEBP_ERROR_INVAL,
    JEBP_ERROR_INVDATA,
    JEBP_ERROR_INVDATA_HEADER,
    JEBP_ERROR_EOF,
    JEBP_ERROR_NOSUP,
    JEBP_ERROR_NOSUP_CODEC,
    JEBP_ERROR_NOSUP_PALETTE,
    JEBP_ERROR_NOMEM,
    JEBP_ERROR_IO,
    JEBP_ERROR_UNKNOWN,
    JEBP_NB_ERRORS
} jebp_error_t;
typedef struct jebp_color_t {
    jebp_ubyte r;
    jebp_ubyte g;
    jebp_ubyte b;
    jebp_ubyte a;
} jebp_color_t;
typedef struct jebp_image_t {
    jebp_int width;
    jebp_int height;
    jebp_color_t *pixels;
} jebp_image_t;
const char *jebp_error_string(jebp_error_t err);
void jebp_free_image(jebp_image_t *image);
typedef struct jebp_io_callbacks {
    /* fill "data" with 'n' bytes; return number of bytes read */
    size_t (*read)(void *data, size_t n, void *user);
    /* return 1 if error, 0 if no error */
    int (*check_error)(void *user);
} jebp_io_callbacks;
jebp_error_t jebp_read_from_callbacks(jebp_image_t *image,
                                 const jebp_io_callbacks *cb, void *user);
jebp_error_t jebp_read_size_from_callbacks(jebp_image_t *image,
                                           const jebp_io_callbacks *cb,
                                           void *user);
typedef struct jebp__reader_t {
    size_t nb_bytes;
    const jebp_ubyte *bytes;
#ifndef JEBP_NO_CALLBACKS
    void *buffer;
    void *user;
    jebp_io_callbacks cb;
#endif // JEBP_NO_CALLBACKS
} jebp__reader_t;
const char *jebp_error_string(jebp_error_t err) {
    if (err < 0 || err >= JEBP_NB_ERRORS) {
        err = JEBP_ERROR_UNKNOWN;
    }
    return jebp__error_strings[err];
}
void jebp_free_image(jebp_image_t *image) {
    if (image != NULL) {
        JEBP_FREE(image->pixels);
        JEBP__CLEAR(image, sizeof(jebp_image_t));
    }
}
jebp_error_t jebp_read_size_from_callbacks(jebp_image_t *image,
                                           const jebp_io_callbacks *cb,
                                           void *user) {
    jebp_error_t err;
    if (image == NULL || cb == NULL) {
        return JEBP_ERROR_INVAL;
    }
    jebp__reader_t reader;
    if ((err = jebp__init_callbacks(&reader, cb, user)) != JEBP_OK) {
        return err;
    }
    err = jebp__read_size(image, &reader);
    JEBP_FREE(reader.buffer);
    return err;
}
jebp_error_t jebp_read_from_callbacks(jebp_image_t *image,
                                      const jebp_io_callbacks *cb, void *user) {
    jebp_error_t err;
    if (image == NULL || cb == NULL) {
        return JEBP_ERROR_INVAL;
    }
    jebp__reader_t reader;
    if ((err = jebp__init_callbacks(&reader, cb, user)) != JEBP_OK) {
        return err;
    }
    err = jebp__read(image, &reader);
    JEBP_FREE(reader.buffer);
    return err;
}